# hpc-sorting-serious-game

./: .editorconfig  .gitignore  .gitmodules  GD-SYNC-WEB-EXPORT-FIX-PLAN.md  GDSync-protected.png.import  LICENSE  OptimizedBuildProfile.gdbuild  README.md  export_presets.cfg  gdformatrc  icon.png.import  icon.svg.import  icon.webp.import  justfile  mygame.keystore  project.godot  pyproject.toml  scene_manager.gd  scene_manager.gd.uid  settings.gd  settings.gd.uid  theme_manager.gd  theme_manager.gd.uid  var_tree_preview.png.import  webrtc.gdextension.uid
.github/workflows/: deploy-gh-pages.yml
GD-SyncTemplates/Accounts/: create_account.gd.uid  login.gd.uid
GD-SyncTemplates/Leaderboards/: leaderboard_browser.gd.uid  leaderboard_label.gd.uid
GD-SyncTemplates/LobbyBrowser/: lobby_browser.gd.uid  lobby_label.gd.uid
GD-SyncTemplates/TextChat/: text_chat.gd.uid
addons/: GD-Sync
exports/: main.py
git-submodules/: .gitignore
icon/: icon-1-sort.png.import  icon-2-sort.png.import  icon.png.import  icon.svg.import  icon.webp.import
justfiles/: formatter.justfile  multiplayer.justfile  network.justfile  thesis.justfile  web-export.justfile
res/: background_styleblox.tres  dark_theme.tres  menu_theme.tres  new_theme.tres  theme-colors.jpg.import  theme-colors.xml
scenes/: main_card_panel_scroll_container.gd  menu-scene.tscn  scroll_container.gd  scroll_container.gd.uid  singleplayer-scene.tscn  singleplayer_scene.tscn  timer_controller_script.gd  timer_controller_script.gd.uid  toast_notification.tscn
signaling-server/: server.py
thesis/: 01_INTRODUCTION.md  THESIS_REVIEW_ISSUES.md  bulletpoints.tex  main.tex  references.bib
(+2269 files in other folders)
